@@ -52,6 +52,12 @@
     <span class="fn"><a href="http://www.xanthir.com/contact/">Tab Atkins Jr.</a></span>,
     <span class="org">Google, Inc.</span>
   </dd>
+  <dt>Authors:
+  <dd class="vcard">
+    <span class="fn">Brian Birtles</span>,
+    <span class="org">Mozilla Japan</span>, 
+    <span class="email">bbirtles@mozilla.com</span>
+  </dd>
 </dl>
 
 <!--copyright-->
