@@ -72,6 +72,12 @@
     <dd class=vcard> <span class=fn><a
      href="http://www.xanthir.com/contact/">Tab Atkins Jr.</a></span>, <span
      class=org>Google, Inc.</span>
+
+    <dt>Authors:
+
+    <dd class=vcard> <span class=fn>Brian Birtles</span>, <span
+     class=org>Mozilla Japan</span>, <span
+     class=email>bbirtles@mozilla.com</span>
    </dl>
    <!--begin-copyright-->
    <p class=copyright><a
