@@ -3,6 +3,7 @@
 	property.
 	Fix some typos / grammar.
 	Fix some linking issues.
+	Add Brian as author.
 
 2012-09-19 dschulze@adobe.com
 	Fxed typos.
